tests/errors/test_increment_errors.mob
// Test error: increment on non-integer (string)
var str = "hello";
str++;  // Should error: Increment/decrement can only be applied to integers

